# TALOS

./: .gitignore  .gitmodules  README.md  requirements.txt
docs/diagrams/: TALOS.vpp
location/: grounding_dino_location.py  requirements.txt
location/grounding-dino/: requirements.txt
location/grounding_dino/: grounding_dino_location.py
location/output_location/: location_gdino_2025_02_24_11_04_34.txt
src/: pipeline.py
src/evaluation/: README.md
src/input_images/: INFO.md
src/location/: grounding_dino_location.py
src/pipeline/: pipeline.py  pipeline_main.py
src/pipeline/common/: file_saving.py  large_model_tagging.py  large_models.py
src/pipeline/config/: config.json  config.py  paths.py
src/pipeline/factory/: factory.py
src/pipeline/input_images/: INFO.md
src/pipeline/location/: __init__.py  grounding_dino_location.py
src/pipeline/output_segments/: INFO.md
src/pipeline/segmentation/: __init__.py  sam2_segmentation.py
src/pipeline/strategy/: strategy.py
src/pipeline/tagging/: __init__.py  (+1 more)
src/segmentation/: requirements.txt  sam2_segm0.py  sam2_segmentation.py
src/talos_ros2/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  talos_ros2.py
src/talos_ros2/talos_ros2/: pipeline_ros2_main.py  talos_ros2.py
src/utils/: clear_output_files.py  print_utils.py
tagging/: ram_plus_tagging_common.py
tagging/ram/: ram_plus_tagging.py  ram_plus_tagging_uncommon.py
tagging/ram_plus_tagging/: ram_plus_tagging.py  requirements.txt
tests/: README.md
tests/pipeline/: test_pipeline_main.py
venvs/: update_venv.bash
(+77 files in other folders)
