<?xml version="1.0"?>
<package format="3">
  <name>talos_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 package for TALOS</description>
  <maintainer email="macorisd@gmail.com">Macorís Decena Giménez</maintainer>
  <license>MIT</license>

  <build_depend>rclpy</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
